[package]
name = "DOE"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Error Handling
eyre = "0.6"
color-eyre = "0.6"
thiserror = "1.0"

# Serialization
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Async & Parallel
tokio = "1.0"
rayon = "1.8"
dashmap = "5.5"
flume = "0.11"

# GPU & Graphics
ash = "0.38"
gpu-allocator = "0.25"
vulkano = "0.34"
vulkano-shaders = "0.34"
vulkano-util = "0.34"
vulkano-macros = "0.34"
vulkano-shaders-derive = "0.34"
moltenvk = "1.2"
bytemuck = "1.14"
encase = "0.8"
gpu-descriptor = "0.2"
naga = "0.19"

# Mathematics
glam = "0.29"
nalgebra = "0.33"

# Data Structures
hashbrown = "0.14"
indexmap = "2.0"
parking_lot = "0.12"

# Utilities
uuid = "1.0"
rand = "0.8"
itertools = "0.12"
strum = "0.25"
paste = "1.0"
